# realtime-raytracer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  path_tracer.cpp  path_tracer.hpp
src/: Triangle.cpp  Triangle.hpp  camera.cpp  camera.hpp  canvas.cpp  canvas.hpp  color.cpp  color.hpp  material.cpp  material.hpp  math_tool.cpp  math_tool.hpp  mesh.cpp  mesh.hpp  mesh_object.cpp  mesh_object.hpp  mesh_tool.cpp  mesh_tool.hpp  object.cpp  object.hpp  path_tracer.cpp  path_tracer.hpp  random.cpp  random.hpp  ray.cpp  ray.hpp  render_window.cpp  render_window.hpp  scene.cpp  scene.hpp  skybox.cpp  skybox.hpp  sphere.cpp  sphere.hpp  texture2d.cpp  texture2d.hpp  triangle.cpp  vec3.cpp  vec3.hpp
src/math/: ray.cpp  ray.hpp  vec3.cpp  vec3.hpp
src/wnd/: imgui_pixel_renderer.cpp  imgui_pixel_renderer.h  imgui_wnd.cpp  imgui_wnd.h
